<resources>
    <string name="app_name">Blues</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="login">登 录</string>

    <string name="no_idel">未设置</string>

    <!--主页底部导航按钮-->
    <string name="bottom_home">主页</string>
    <string name="bottom_contacts">通讯录</string>
    <string name="bottom_personal">动态</string>
    <string name="bottom_message">消息</string>

    <string name="message_01">灰化肥会挥发黑会挥发灰化肥会挥发黑会挥发灰化肥会挥发黑会挥发灰化肥会挥发黑会挥发灰化肥会挥发黑会挥发</string>
    <!--progress hint-->
    <string name="loading">正在加载中&#8230;</string>
    <string name="logging_in">正在登陆&#8230;</string>
    <string name="registerring">正在注册&#8230;</string>

    <!--Login-->
    <string name="login_et_username_hint">请输入用户名</string>
    <string name="login_et_password_hint">请输入密码</string>
    <string name="login_text_remember">记住密码</string>
    <string name="login_text_find">找回密码</string>
    <string name="login_text_first_use">第一次使用？</string>
    <string name="login_text_register">立即注册</string>

    <!--Register-->
    <string name="register_et_username_hint">请输入用户名</string>
    <string name="register_et_password_hint">请输入密码</string>
    <string name="register_et_repassword_hint">再次输入密码</string>
    <string name="register_btn_register">注册</string>

    <!--    contact    -->
    <string name="contact_new_friend">新的朋友</string>
    <string name="contact_group_chat">群聊</string>
    <string name="contact_tag">标签</string>
    <string name="contact_subscribe">订阅号</string>
    <string name="contact_star_friend">星标朋友</string>

</resources>
